fix 3 for zoom issue on mobile

--- a/style.css
+++ b/style.css
@@ -35,31 +35,29 @@ body {
 	background-repeat: no-repeat;
 	background-color: rgba(0, 8, 24, 0.86);
 	background-blend-mode: var(--blend);
-	padding: 1rem;
+	padding: 2rem 1rem;
 	grid-template: max-content 1fr / auto;
 	color: var(--color-text);
 }
 
 form {
-	/* width: 350px; */
-	height: max-content;
 	display: grid;
-	grid-template: auto auto / auto auto;
+	/* width: 350px; */
+	grid-template: auto auto / 1fr auto;
 	justify-self: end;
 	gap: 5px 0;
 	--error-text: var(--color-text);
 }
 
 input {
-	background-color: var(--transparency-backdrop);
 	height: 40px;
 	/* width: 200px; */
+	background-color: var(--transparency-backdrop);
 	border-radius: 10px 0 0 10px;
 	padding: 5px 0px 5px 10px;
 	color: var(--color-text);
 	outline: none;
-	border: 1px solid transparent;
-	border-right: none;
+	border: 0px solid transparent;
 	font-size: 1.2rem;
 	backdrop-filter: blur(50px);
 }
@@ -79,8 +77,7 @@ button {
 	outline: none;
 	cursor: pointer;
 	border-radius: 0 10px 10px 0;
-	border: 1px solid transparent;
-	border-left: 0px solid transparent;
+	border: 0px solid transparent;
 }
 
 input::placeholder {
@@ -92,10 +89,6 @@ input:focus + button {
 	border-left: 0px solid transparent;
 }
 
-/* button:focus {
-	border: 1px solid var(--color-text);
-	border-left: 0px solid transparent;
-} */
 form.error {
 	--error-text: var(--error-color);
 }
@@ -113,7 +106,6 @@ form.error button {
 .error-text {
 	text-transform: capitalize;
 	grid-column: 1 / 3;
-	/* padding-left: 10px; */
 	font-weight: 400;
 	color: var(--error-text);
 	visibility: hidden;
@@ -136,9 +128,7 @@ button svg path {
 
 .weather-container {
 	backdrop-filter: blur(50px);
-	/* margin-left: 5rem; */
 	padding: 2rem;
-	width: max-content;
 	display: grid;
 	align-self: center;
 	border-radius: 10px;
@@ -151,7 +141,6 @@ button svg path {
 
 .weather-container h1 {
 	position: relative;
-	/* background-color: red; */
 	line-height: 1;
 	width: max-content;
 	font-size: 8em;
@@ -164,7 +153,6 @@ button svg path {
 	transform: scale(2.2);
 	margin-left: 0.5rem;
 	top: 15%;
-	/* left: 102%; */
 	font-weight: 300;
 }
 
@@ -197,11 +185,16 @@ button svg path {
 #feels::after {
 	content: "°C";
 }
+
 #humidity::after {
 	content: "%";
 }
 
 @media screen and (max-width: 480px) {
+	input {
+		width: 200px;
+	}
+
 	.weather-container {
 		font-size: 0.8rem;
 		padding: 1rem;
@@ -212,6 +205,6 @@ button svg path {
 	}
 
 	.minor-info {
-		padding-right: 1.5rem;
+		padding-right: 1rem;
 	}
 }
